# Hackaton-BigData

./: .gitignore  pyproject.toml
notebooks/: 01-analise-exploratoria-dados.ipynb  02-feature-engineering.ipynb
