[tool.poetry]
name = "hackaton"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyspark = "^4.0.1"
jupyterlab = "^4.4.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
